--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="preloader-inner position-relative">
             <div class="preloader-circle"></div>
             <div class="preloader-img pere-text">
-                <strong>Hotel</b>
+                <strong>Hotel</strong>
             </div>
         </div>
     </div>
